fix LTCE grids, weird alignment in details

--- a/src/styles/vendor.scss
+++ b/src/styles/vendor.scss
@@ -169,6 +169,10 @@ rv-table-setting-cluster {
 }
 
 .rv-details {
+    .rv-details-list div {
+        display: block;
+    }
+    
     .precip-icon:before, .rdpa6-icon:before, .rdpa24-icon:before {
         content: "";
         position: absolute;
